--- a/index.htm
+++ b/index.htm
@@ -1,32 +1,34 @@
 ﻿
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<link rel="stylesheet" href="sait1.css">
-</head>
-<body>
-<header>
-  <h2>Крипта.СВІТ</h2>
-</header>
+<! DOCTYPE html >
+< html >
+< голова >
+	< title > </ title >
+	< link  rel = " stylesheet " href = " sait1.css " >
+</ head >
+< тело >
+< заголовок >
+  < h2 > ANTPLACE </ h2 >
+	< h3 > Твоя голова у мурашиному свету ... </ h3 >
+</ header >
 
-<section>
-  <nav>
-    <ul>
-      <li><a href="sait2.html">Про професію</a></li>
-      <li><a href="sait3.html">Наші послуги</a></li>
-    </ul>
-  </nav>
+< раздел >
+  < nav >
+    < ul >
+      < Литий > < HREF = " sait2.html " > Про професію </ > </ литий > 
+      < Литий > < HREF = " sait3.html " > Наші послуги </ > </ литий > 
+    </ ul >
+  </ nav >
   
-  <article>
-    <h1>Біткоїн та інші віртуальні валюти набувають дедалі більшого поширення, і спеціалісти з цих фінансів потрібні вже зараз. Прогнозують, що в цій галузі виникне ще не одна нова професія. Наприклад, мультивалютний перевідник, що організовуватиме системи обміну між традиційними та альтернативними валютами.</h1>
- 
-  </article>
-</section>
+  < статья >
+    < h2 > Друже. Дай вгадаю - на цей сайт ти зайшов випадково. Ні? Тоджи можеш не читать, а подписывает те, за чи прийшов. Але скоріше таки випадково. Я так думаю, что я не думаю, что когда-нибудь ты поймешь, что ты хочешь сделать это - аж занадто багато незнайомих слів. Проте! Я знаю, тебе не нужно посылать. Я верю в то, что все окситии у нас в стране, где есть своя аппетит, адмиралтейство, мирмекология и все такое.
+	    </ h2 >
+	  < h1 > Добре, ти маєш хвилину моєї уваги. </ h1 >
+  </ article >
+</ section >
 
-<footer>
-  <p>Кипта.СВІТ - допоможемо тобі стати успішним сьогодні і завтра!</p>
-</footer>
+< нижний колонтитул >
+  < p > Кипта.СВІТ - дополнительные возможности для отдыха с завтрашним днем! </ p >
+</ footer >
 
-</body>
-</html>
+</ body >
+</ html >
