--- a/sait2.html
+++ b/sait2.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <header>
-  <h2>Крипта.СВІТ</h2>
+ < h2 > ANTPLACE </ h2 >
+	< h3 > Твоя голова у мурашиному свету ... </ h3 >
 </header>
 
 <section>
