--- a/index.htm
+++ b/index.htm
@@ -1,34 +1,34 @@
 ﻿
-<! DOCTYPE html >
-< html >
-< голова >
-	< title > </ title >
-	< link  rel = " stylesheet " href = " sait1.css " >
-</ head >
-< тело >
-< заголовок >
-  < h2 > ANTPLACE </ h2 >
-	< h3 > Твоя голова у мурашиному свету ... </ h3 >
-</ header >
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" href="sait1.css">
+</head>
+<body>
+<header>
+ <h2>ANTPLACE</h2>
+	<h3>Твій гід у мурашиному світі...</h3>
+</header>
 
-< раздел >
-  < nav >
-    < ul >
-      < Литий > < HREF = " sait2.html " > Про професію </ > </ литий > 
-      < Литий > < HREF = " sait3.html " > Наші послуги </ > </ литий > 
-    </ ul >
-  </ nav >
+<section>
+  <nav>
+    <ul>
+      <li><a href="sait2.html"><b>Про професію</b></a></li>
+      <li><a href="sait3.html">Наші послуги</a></li>
+    </ul>
+  </nav>
   
-  < статья >
-    < h2 > Друже. Дай вгадаю - на цей сайт ти зайшов випадково. Ні? Тоджи можеш не читать, а подписывает те, за чи прийшов. Але скоріше таки випадково. Я так думаю, что я не думаю, что когда-нибудь ты поймешь, что ты хочешь сделать это - аж занадто багато незнайомих слів. Проте! Я знаю, тебе не нужно посылать. Я верю в то, что все окситии у нас в стране, где есть своя аппетит, адмиралтейство, мирмекология и все такое.
-	    </ h2 >
-	  < h1 > Добре, ти маєш хвилину моєї уваги. </ h1 >
-  </ article >
-</ section >
+  <article>
+    <h2>Найпростішою відповіддю на питання, що таке криптовалюта, є фраза віртуальних грошей. Кожна віртуальна валюта побудована за технологією blockchain. Цифрова валюта Bitcoin, як і інші криптовалюти, використовується для оплати рахунків або транзакцій. Але в той же час цифрові гроші не мають центрального органу управління. Усі операції перевіряються мережею Blockchain, тобто іншими користувачами. Кожен блок складається з ланцюгових операцій. Всі вони взаємопов'язані. Тому підробити або скасувати угоду неможливо.</h2>
+    <h2>Cкладнувато? Трохи, але тому в цій галузі й потрібні спеціалісти. Причому оплата їх буде високою.</h2>
+     <h2>Ну добре-добре, висока оплата і професіоналізм в сучасності це круто. Але як дійти до всього цього?  От тут вам і станемо в нагоді ми. А хто ми? Ми висококваліфіковані й досвідчені спеціалісти з області криптовалютних технологій, що хочуть передати все своє вам. Ми допоможемо вибрати вуз, більш вузько виділити спеціалізацію у цій області, поступити, пройти практику і далі по плану. Цікавить? Маєте певні питання? Пишіть нам на електронну пошту чи дзвоніть, або навіть влаштуйте живу зустріч із нашими менеджерами. <b href="sait3.html">*КЛІК*</b></h2>
+  </article>
+</section>
 
-< нижний колонтитул >
-  < p > Кипта.СВІТ - дополнительные возможности для отдыха с завтрашним днем! </ p >
-</ footer >
+<footer>
+  <p>Кипта.СВІТ - допоможемо тобі стати успішним сьогодні і завтра!</p>
+</footer>
 
-</ body >
-</ html >
+</body>
+</html>
