--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
- <h2>ANTPLACE</h2>
+ <h2 margin-bottom=3px>ANTPLACE</h2>
 	<h3>Твій гід у мурашиному світі...</h3>
 </header>
 
