--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 <body>
 <header>
  <h2 margin-bottom: 3px>ANTPLACE</h2>
-	<h3>Твій гід у мурашиному світі...</h3>
+	<h3 margin-top: 3px>Твій гід у мурашиному світі...</h3>
 </header>
 
 <section>
