--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-﻿
+n﻿
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,8 +7,8 @@
 </head>
 <body>
 <header>
- <h2 margin-bottom: 3px>ANTPLACE</h2>
-	<h3 margin-top: 3px>Твій гід у мурашиному світі...</h3>
+ <h2 margin-bottom: 3px>PROF.find</h2>
+	<h3 margin-top: 3px>Шукаеш роботу? Тобі до нас!</h3>
 </header>
 
 <section>
@@ -20,7 +20,7 @@
   </nav>
   
   <article>
-    <h2>Найпростішою відповіддю на питання, що таке криптовалюта, є фраза віртуальних грошей. Кожна віртуальна валюта побудована за технологією blockchain. Цифрова валюта Bitcoin, як і інші криптовалюти, використовується для оплати рахунків або транзакцій. Але в той же час цифрові гроші не мають центрального органу управління. Усі операції перевіряються мережею Blockchain, тобто іншими користувачами. Кожен блок складається з ланцюгових операцій. Всі вони взаємопов'язані. Тому підробити або скасувати угоду неможливо.</h2>
+    <h2>Наш сайт цілком спеціалізується на допомозі в пошуку роботи людям. І не просто роботи, а сучасної професії з високою оплатою, і яка була б при цьому цікава</h2>
     <h2>Cкладнувато? Трохи, але тому в цій галузі й потрібні спеціалісти. Причому оплата їх буде високою.</h2>
      <h2>Ну добре-добре, висока оплата і професіоналізм в сучасності це круто. Але як дійти до всього цього?  От тут вам і станемо в нагоді ми. А хто ми? Ми висококваліфіковані й досвідчені спеціалісти з області криптовалютних технологій, що хочуть передати все своє вам. Ми допоможемо вибрати вуз, більш вузько виділити спеціалізацію у цій області, поступити, пройти практику і далі по плану. Цікавить? Маєте певні питання? Пишіть нам на електронну пошту чи дзвоніть, або навіть влаштуйте живу зустріч із нашими менеджерами. <b href="sait3.html">*КЛІК*</b></h2>
   </article>
