--- a/interesting.html
+++ b/interesting.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="topnav">
-  <a href="start-page.html">Що чекає нас завтра?</a>  
+  <a href="index.html">Що чекає нас завтра?</a>  
     <a href="skoroprof.html" >Кілька порад</a>
     <a href="profs.html">Професії</a>
     <a href="intersting.html" style="background-color: #FCCB1A; color: black;">Цікаво</a>
