--- a/profs.html
+++ b/profs.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="topnav">
-	<a href="start-page.html" >Що чекає нас завтра?</a>	
+	<a href="index.html" >Що чекає нас завтра?</a>	
   	<a href="skoroprof.html">Кілька порад</a>
   	<a href="#" style="background-color: #FCCB1A; color: black;">Професії</a>
   	<a href="interesting.html">Цікаво</a>
